--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
   height: 100vh;
   width: 100%;
   padding: 0 8%;
-
   position: relative;
 }
 nav {
@@ -22,6 +21,10 @@ nav {
 .nav-links {
   padding: 28px 0;
 }
+.nav-links li{
+        display: inline-block;
+        margin: 0 15px;
+}
 .nav-links li a {
   text-decoration: none;
   color: #fff;
@@ -29,7 +32,7 @@ nav {
   position: relative;
 }
 .nav-links li a::after {
-  content: " ";
+  content: ' ';
   background: #ff3d00;
   width: 0;
   height: 2px;
@@ -102,7 +105,7 @@ nav {
   justify-content: center;
   flex-direction: column;
 }
-.categoryimg {
+.category img {
   width: 25px;
   margin-bottom: 5px;
 }
@@ -119,12 +122,12 @@ nav {
 @media (min-aspect-ratio: 16/9) {
   .back-video {
     width: 100%;
-    height: auto%;
+    height: auto;
   }
 }
 @media (max-aspect-ratio: 16/9) {
   .back-video {
-    width: auto%;
+    width: auto;
     height: 100%;
   }
 }
